--- a/index.html
+++ b/index.html
@@ -1,1 +1,200 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>ghpage</title><link href=/css/app.60eb037c.css rel=preload as=style><link href=/js/app.4aa83adc.js rel=preload as=script><link href=/js/chunk-vendors.37632507.js rel=preload as=script><link href=/css/app.60eb037c.css rel=stylesheet></head><body><noscript><strong>We're sorry but ghpage doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.37632507.js></script><script src=/js/app.4aa83adc.js></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Arjun Gupta | Portfolio</title>
+
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+    }
+
+    body {
+      background: #0f172a;
+      color: #e5e7eb;
+      line-height: 1.6;
+    }
+
+    a {
+      color: #38bdf8;
+      text-decoration: none;
+    }
+
+    header {
+      padding: 80px 20px;
+      text-align: center;
+    }
+
+    header h1 {
+      font-size: 3rem;
+      margin-bottom: 10px;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      color: #94a3b8;
+      max-width: 700px;
+      margin: 0 auto;
+    }
+
+    section {
+      max-width: 900px;
+      margin: auto;
+      padding: 60px 20px;
+    }
+
+    section h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+      border-bottom: 2px solid #1e293b;
+      padding-bottom: 10px;
+    }
+
+    .card {
+      background: #020617;
+      padding: 20px;
+      border-radius: 12px;
+      margin-bottom: 20px;
+      border: 1px solid #1e293b;
+    }
+
+    .card h3 {
+      margin-bottom: 8px;
+    }
+
+    .card p {
+      color: #cbd5f5;
+    }
+
+    ul {
+      margin-left: 20px;
+    }
+
+    li {
+      margin-bottom: 8px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 40px 20px;
+      color: #94a3b8;
+      border-top: 1px solid #1e293b;
+    }
+
+    .links a {
+      margin: 0 10px;
+    }
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 2.2rem;
+      }
+    }
+  </style>
+</head>
+
+<body>
+
+  <!-- HERO -->
+  <header>
+    <h1>Arjun Gupta</h1>
+    <p>
+      Product & Tech Strategy | AI & Digital Transformation | Ex-Consultant  
+      <br />
+      Building scalable systems, driving impact, and turning ambiguity into execution.
+    </p>
+    <div class="links" style="margin-top: 20px;">
+      <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
+      <a href="https://github.com/arjun3023" target="_blank">GitHub</a>
+      <a href="mailto:your@email.com">Email</a>
+    </div>
+  </header>
+
+  <!-- ABOUT -->
+  <section>
+    <h2>About Me</h2>
+    <div class="card">
+      <p>
+        I’m a tech-strategy and product-focused professional with experience across
+        consulting, startups, and enterprise environments. I’ve worked on data
+        migration, AI-driven analytics, SaaS platforms, and large-scale digital
+        transformation initiatives.
+      </p>
+      <p style="margin-top: 10px;">
+        I enjoy solving messy problems, working with cross-functional teams, and
+        translating business needs into scalable technical solutions.
+      </p>
+    </div>
+  </section>
+
+  <!-- EXPERIENCE -->
+  <section>
+    <h2>Experience</h2>
+
+    <div class="card">
+      <h3>Manager / Technical Consultant</h3>
+      <p><strong>HCLTech – Samsung SDS</strong></p>
+      <ul>
+        <li>Led migration from third-party time-off tool to in-house system</li>
+        <li>Saved ~$700K annually and improved efficiency by 25%</li>
+        <li>Executed zero-downtime data migration</li>
+      </ul>
+    </div>
+
+    <div class="card">
+      <h3>Full-Stack Developer & Proxy Product Owner</h3>
+      <p><strong>FieldAssist</strong></p>
+      <ul>
+        <li>Worked on SaaS products in FMCG domain</li>
+        <li>Scaled engineering team from 15 → 150</li>
+        <li>Handled sprint planning, backlog grooming, and releases</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- PROJECTS -->
+  <section>
+    <h2>Projects</h2>
+
+    <div class="card">
+      <h3>AI-Driven Analytics Platform</h3>
+      <p>
+        Built analytics workflows using unstructured data to generate business
+        insights, sentiment analysis, and compliance checklists.
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>Power BI Sales Intelligence Dashboard</h3>
+      <p>
+        Designed optimized transaction databases and dashboards to track sales
+        trends, pricing strategies, and order summaries.
+      </p>
+    </div>
+  </section>
+
+  <!-- SKILLS -->
+  <section>
+    <h2>Skills</h2>
+    <div class="card">
+      <ul>
+        <li>Product Management & Tech Strategy</li>
+        <li>AI, GenAI, Analytics</li>
+        <li>Agile, Scrum, Stakeholder Management</li>
+        <li>SQL, Power BI, Azure DevOps</li>
+        <li>Digital Transformation & Consulting Frameworks</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    © 2026 Arjun Gupta · Built with GitHub Pages
+  </footer>
+
+</body>
+</html>
