--- a/index.html
+++ b/index.html
@@ -2,67 +2,61 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Arjun Gupta | Product, Strategy & AI</title>
+  <title>Arjun Gupta | TPM • Product • AI</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
     :root {
-      --bg: #020617;
-      --card: #020617;
-      --border: #1e293b;
-      --text: #e5e7eb;
-      --muted: #94a3b8;
-      --accent: #38bdf8;
+      --bg: #f8fafc;
+      --card: #ffffff;
+      --text: #0f172a;
+      --muted: #475569;
+      --border: #e2e8f0;
+      --accent: #2563eb;
     }
 
     * {
       box-sizing: border-box;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial;
-    }
-
-    html {
-      scroll-behavior: smooth;
+      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial;
     }
 
     body {
       margin: 0;
-      background: linear-gradient(180deg, #020617, #020617);
+      background: var(--bg);
       color: var(--text);
+      line-height: 1.65;
+    }
+
+    a {
+      color: var(--accent);
+      text-decoration: none;
+      font-weight: 500;
     }
 
     /* ---------- NAV ---------- */
     nav {
       position: sticky;
       top: 0;
-      z-index: 10;
-      background: rgba(2, 6, 23, 0.8);
+      background: rgba(248,250,252,0.9);
       backdrop-filter: blur(8px);
       border-bottom: 1px solid var(--border);
+      z-index: 10;
     }
 
     nav ul {
       display: flex;
       justify-content: center;
-      gap: 24px;
-      padding: 14px;
+      gap: 28px;
       list-style: none;
+      padding: 14px;
       margin: 0;
-    }
-
-    nav a {
-      color: var(--muted);
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    nav a:hover {
-      color: var(--accent);
     }
 
     /* ---------- HERO ---------- */
     header {
-      padding: 90px 20px 60px;
-      text-align: center;
+      max-width: 1000px;
+      margin: auto;
+      padding: 90px 20px 70px;
     }
 
     header h1 {
@@ -71,113 +65,79 @@
     }
 
     header p {
-      max-width: 760px;
-      margin: auto;
+      max-width: 820px;
       color: var(--muted);
       font-size: 1.15rem;
     }
 
-    .cta {
-      margin-top: 24px;
+    .hero-metrics {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 14px;
+      margin-top: 28px;
     }
 
-    .cta a {
-      margin: 0 10px;
-      padding: 10px 18px;
-      border-radius: 10px;
+    .metric {
+      background: var(--card);
       border: 1px solid var(--border);
-      color: var(--text);
-      text-decoration: none;
-    }
-
-    .cta a:hover {
-      border-color: var(--accent);
-      color: var(--accent);
+      border-radius: 14px;
+      padding: 14px 18px;
+      font-weight: 600;
     }
 
     /* ---------- SECTIONS ---------- */
     section {
-      max-width: 960px;
+      max-width: 1000px;
       margin: auto;
       padding: 70px 20px;
-      opacity: 0;
-      transform: translateY(20px);
-      transition: 0.6s ease;
-    }
-
-    section.visible {
-      opacity: 1;
-      transform: translateY(0);
     }
 
     section h2 {
       font-size: 2rem;
-      margin-bottom: 24px;
-      border-bottom: 2px solid var(--border);
-      padding-bottom: 10px;
+      margin-bottom: 28px;
     }
 
-    /* ---------- CARDS ---------- */
     .card {
       background: var(--card);
       border: 1px solid var(--border);
-      border-radius: 14px;
-      padding: 22px;
-      margin-bottom: 18px;
-    }
-
-    .card h3 {
-      margin: 0 0 6px;
+      border-radius: 18px;
+      padding: 26px;
+      margin-bottom: 22px;
     }
 
     .muted {
       color: var(--muted);
     }
 
-    /* ---------- EXPERIENCE (TIMELINE FEEL) ---------- */
-    .experience .card {
-      cursor: pointer;
-      transition: border 0.3s;
+    /* ---------- EXPERIENCE ---------- */
+    .role {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 10px;
     }
 
-    .experience .card:hover {
-      border-color: var(--accent);
-    }
-
-    .details {
-      display: none;
-      margin-top: 10px;
-    }
-
-    .details ul {
+    ul {
       margin-left: 20px;
     }
 
-    /* ---------- PROJECTS ---------- */
-    .project-toggle {
-      color: var(--accent);
-      cursor: pointer;
-      font-size: 0.9rem;
+    li {
+      margin-bottom: 8px;
     }
 
     /* ---------- SKILLS ---------- */
     .skills {
       display: flex;
       flex-wrap: wrap;
-      gap: 10px;
+      gap: 12px;
     }
 
     .skill {
-      padding: 8px 14px;
-      border-radius: 20px;
       border: 1px solid var(--border);
-      color: var(--muted);
+      padding: 8px 14px;
+      border-radius: 999px;
+      background: #f1f5f9;
       font-size: 0.9rem;
-    }
-
-    .skill:hover {
-      color: var(--accent);
-      border-color: var(--accent);
     }
 
     /* ---------- FOOTER ---------- */
@@ -188,7 +148,7 @@
       border-top: 1px solid var(--border);
     }
 
-    @media (max-width: 600px) {
+    @media (max-width: 640px) {
       header h1 {
         font-size: 2.2rem;
       }
@@ -198,146 +158,123 @@
 
 <body>
 
-  <!-- NAV -->
-  <nav>
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#experience">Experience</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#skills">Skills</a></li>
-    </ul>
-  </nav>
+<nav>
+  <ul>
+    <li><a href="#about">About</a></li>
+    <li><a href="#experience">Experience</a></li>
+    <li><a href="#ai">AI & Product</a></li>
+    <li><a href="#skills">Skills</a></li>
+  </ul>
+</nav>
 
-  <!-- HERO -->
-  <header>
-    <h1>Arjun Gupta</h1>
+<header>
+  <h1>Arjun Gupta</h1>
+  <p>
+    Technical Program Manager & Product-focused consultant with 5+ years of experience
+    delivering AI-first, analytics-driven, and enterprise-scale solutions across
+    FMCG, FinTech, Hi-Tech, and IT Services.
+  </p>
+
+  <div class="hero-metrics">
+    <div class="metric">💰 $700K+ annual cost savings</div>
+    <div class="metric">📈 $30M delivery portfolio</div>
+    <div class="metric">⚙️ 40% efficiency improvement</div>
+    <div class="metric">👥 150+ team scale-up</div>
+  </div>
+
+  <p style="margin-top:24px;">
+    <a href="mailto:arjungupta3023@gmail.com">Email</a> ·
+    <a href="https://www.linkedin.com/in/arjungupta30/" target="_blank">LinkedIn</a> ·
+    <a href="https://github.com/arjun3023" target="_blank">GitHub</a>
+  </p>
+</header>
+
+<section id="about">
+  <h2>About</h2>
+  <div class="card">
     <p>
-      Product & Tech Strategy professional working at the intersection of
-      <strong>AI, analytics, and digital transformation</strong>.
-      <br />
-      I’ve built systems, scaled teams, and driven outcomes across startups,
-      enterprises, and consulting environments.
+      I work at the intersection of <strong>program management, product strategy,
+      and AI-driven execution</strong>. My strength lies in turning ambiguous business
+      goals into structured delivery roadmaps while aligning engineering, data,
+      and leadership teams.
     </p>
+    <p class="muted">
+      I’ve led PMO governance, owned multi-million dollar delivery portfolios,
+      driven GenAI adoption, and built systems that measurably improve cost,
+      speed, and predictability.
+    </p>
+  </div>
+</section>
 
-    <div class="cta">
-      <a href="https://github.com/arjun3023" target="_blank">GitHub</a>
-      <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
-      <a href="mailto:your@email.com">Email</a>
+<section id="experience">
+  <h2>Experience</h2>
+
+  <div class="card">
+    <div class="role">
+      <strong>Technical Program Manager</strong>
+      <span class="muted">MAQ Software · 2025–Present</span>
     </div>
-  </header>
+    <ul>
+      <li>Managing Microsoft enterprise analytics and AI initiatives</li>
+      <li>Driving roadmap execution, risk management, and stakeholder alignment</li>
+      <li>Improved leadership reporting efficiency by ~30% via governed Power BI models</li>
+    </ul>
+  </div>
 
-  <!-- ABOUT -->
-  <section id="about">
-    <h2>About</h2>
-    <div class="card">
-      <p>
-        I enjoy solving ambiguous problems that sit between business and technology.
-        My work spans AI-driven analytics, SaaS platforms, large-scale data migration,
-        and enterprise transformation initiatives.
-      </p>
-      <p class="muted">
-        I’m particularly interested in GenAI adoption, product strategy,
-        and how organizations scale execution without losing velocity.
-      </p>
+  <div class="card">
+    <div class="role">
+      <strong>Technical Consultant</strong>
+      <span class="muted">HCLTech – Samsung SDS · 2022–2024</span>
     </div>
-  </section>
+    <ul>
+      <li>Delivered $700K annual savings by migrating from third-party to in-house platform</li>
+      <li>Led 5 cross-functional pods (150+ members) across global delivery</li>
+      <li>Reduced sprint unpredictability by 30% and accelerated releases by 20%</li>
+    </ul>
+  </div>
 
-  <!-- EXPERIENCE -->
-  <section id="experience" class="experience">
-    <h2>Experience (click to expand)</h2>
-
-    <div class="card" onclick="toggle(this)">
-      <h3>Manager / Technical Consultant</h3>
-      <p class="muted">HCLTech – Samsung SDS</p>
-      <div class="details">
-        <ul>
-          <li>Led migration from third-party time-off system to in-house platform</li>
-          <li>Saved ~$700K annually with zero downtime</li>
-          <li>Improved operational efficiency by ~25%</li>
-        </ul>
-      </div>
+  <div class="card">
+    <div class="role">
+      <strong>Full Stack Engineer / Proxy Product Owner</strong>
+      <span class="muted">FieldAssist · 2019–2022</span>
     </div>
+    <ul>
+      <li>Built SaaS no-code reporting platform with 60% reduction in manual errors</li>
+      <li>Optimized dashboards for 80% faster load time</li>
+      <li>Scaled engineering org from 15 → 150</li>
+    </ul>
+  </div>
+</section>
 
-    <div class="card" onclick="toggle(this)">
-      <h3>Full-Stack Developer & Proxy Product Owner</h3>
-      <p class="muted">FieldAssist</p>
-      <div class="details">
-        <ul>
-          <li>Worked on SaaS products in FMCG ecosystem</li>
-          <li>Scaled engineering org from 15 → 150</li>
-          <li>Owned sprint planning, backlog, and stakeholder alignment</li>
-        </ul>
-      </div>
-    </div>
-  </section>
+<section id="ai">
+  <h2>AI & Product Work</h2>
+  <div class="card">
+    <ul>
+      <li>Designed GenAI-powered SDLC accelerator reducing planning effort by 30%</li>
+      <li>Created AI-driven debt collection and compliance solutions for FinTech firms</li>
+      <li>Built Compliance Bot POC aligned with RBI guidelines</li>
+      <li>Authored PRDs, user stories, and Figma prototypes for AI-enabled products</li>
+    </ul>
+  </div>
+</section>
 
-  <!-- PROJECTS -->
-  <section id="projects">
-    <h2>Projects</h2>
+<section id="skills">
+  <h2>Skills</h2>
+  <div class="card skills">
+    <span class="skill">Technical Program Management</span>
+    <span class="skill">Product Strategy</span>
+    <span class="skill">AI & GenAI</span>
+    <span class="skill">Azure DevOps</span>
+    <span class="skill">Power BI</span>
+    <span class="skill">Agile / Scrum</span>
+    <span class="skill">Stakeholder Management</span>
+    <span class="skill">SQL & Data Modeling</span>
+  </div>
+</section>
 
-    <div class="card">
-      <h3>AI-Driven Analytics Platform</h3>
-      <p class="muted">
-        Unstructured data → insights → decisions
-      </p>
-      <p class="project-toggle" onclick="this.nextElementSibling.classList.toggle('hidden')">
-        What did I actually do?
-      </p>
-      <div>
-        <ul>
-          <li>Built sentiment analysis pipelines</li>
-          <li>Designed compliance checklists using AI signals</li>
-          <li>Converted messy data into executive-ready insights</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="card">
-      <h3>Sales Intelligence with Power BI</h3>
-      <p>
-        Optimized transaction databases and dashboards for leadership decision-making.
-      </p>
-    </div>
-  </section>
-
-  <!-- SKILLS -->
-  <section id="skills">
-    <h2>Skills</h2>
-    <div class="card skills">
-      <span class="skill">Product Strategy</span>
-      <span class="skill">AI & GenAI</span>
-      <span class="skill">Analytics</span>
-      <span class="skill">Agile / Scrum</span>
-      <span class="skill">Stakeholder Management</span>
-      <span class="skill">SQL</span>
-      <span class="skill">Power BI</span>
-      <span class="skill">Azure DevOps</span>
-      <span class="skill">Digital Transformation</span>
-    </div>
-  </section>
-
-  <!-- FOOTER -->
-  <footer>
-    © 2026 Arjun Gupta · Built with GitHub Pages
-  </footer>
-
-  <!-- JS -->
-  <script>
-    function toggle(card) {
-      const details = card.querySelector(".details");
-      details.style.display = details.style.display === "block" ? "none" : "block";
-    }
-
-    const observer = new IntersectionObserver(entries => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add("visible");
-        }
-      });
-    });
-
-    document.querySelectorAll("section").forEach(sec => observer.observe(sec));
-  </script>
+<footer>
+  © 2026 Arjun Gupta · Built on GitHub Pages
+</footer>
 
 </body>
 </html>
